--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
 
 telegram_bot_username: official_support_company_bot
 telegram_bot_botToken: 5535259100:AAE667Qew7HyRTa-ty4zd55_TV_MsB_kTGU
-special_code: '123'
+special_code: '+998909741228 +998332002022'
 
 
 #https://matn.uz/
